# open-music-player

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.research-worker  ISSUE-292.md  README.md  REPORT-285-1.md  REPORT-286.md  REPORT-287A.md  REPORT-287B.md  REPORT-291.md  REPORT-292.md  TASK-292.md  docker-compose.local-low-memory.yml  docker-compose.yml  go.mod
.github/: pull_request_template.md
agents/candidate_assembly/: README.md  pyproject.toml
agents/candidate_assembly/src/candidate_assembly/: __init__.py  budgets.py  fixture_tools.py  gateway_tools.py  go_ranker.py  model_client.py  orchestrator.py  schemas.py  snapshot_tools.py  tool_transport.py  validate.py  worker_runner.py
agents/candidate_assembly/src/candidate_assembly/arms/: __init__.py  deep_agent.py  deterministic.py  direct_judge.py
agents/candidate_assembly/src/candidate_assembly/evalrunner/: __init__.py  cli.py  corpus.py  gateway.py  graders.py  known_failures.py  redaction.py  runner.py
agents/candidate_assembly/src/candidate_assembly/fixtures/: corpus.v1.json  gateway_cases.v1.json  known_failures.v1.json
agents/candidate_assembly/src/candidate_assembly/fixtures/pools/: altered-audio-trap.json  artist-only-ambiguous.json  cover-versus-original.json  duration-unknown-catalog-gap.json  explicit-official-audio.json  live-explicitly-requested.json  live-trap-not-requested.json  plain-artist-song-official-audio.json  platform-preference-soundcloud.json  remix-from-a-set.json  short-version-trap.json  topic-channel-only.json
agents/candidate_assembly/tests/: conftest.py  test_budgets.py  test_cli_model_matrix.py  test_corpus.py  test_deep_agent_finalize.py  test_direct_judge_telemetry.py  test_gateway_eval.py  test_gateway_tools.py  test_go_ranker.py  test_graders.py  test_known_failures.py  test_model_transport.py  test_retrieval.py  test_runner_live_baseline.py  test_runner_redaction_and_recordings.py  test_runner_replay.py  test_schemas.py  test_validate.py  test_worker_runner.py
(+680 files in other folders)
