[project]
name = "candidate-assembly"
version = "0.1.0"
description = "Bounded, evals-first candidate-assembly orchestrator prototype for OMP song search (issue #265)."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
]

[project.optional-dependencies]
# The agent stack is only needed for live model runs (deep_agent / direct_judge
# arms). It is deliberately kept out of the default install so `uv sync` and the
# network-free replay CI gate stay light: the deterministic arm and every unit
# test import nothing from this group. Install with `uv sync --extra live`.
live = [
    "deepagents==0.6.12",
    "langchain==1.3.11",
    "langgraph==1.2.8",
    "langchain-openai>=1.3,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/candidate_assembly"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
